# subprocessing

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
src/subprocessing/: __init__.py
tests/: conftest.py  test_subprocessed.py
