[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "subprocessing"
version = "0.0"
authors = [
    {name="Yohann PIPEAU", email="yohann.pipeau@gmail.com"},
]
description = "Execute a function in a Python subprocess instead of using the Python main process."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "tox>=4",
    "pytest>=6",
    "pytest-cov",
    "coverage>=5.3",
    "pytest-profiling",
    "pylint>=2",
    "black==23.*",
    "isort",
    "mypy",
    "pydocstyle>=2",
]

[project.urls]
"Homepage" = "https://gitlab.com/gorgh/subprocessing"
"Bug Tracker" = "https://gitlab.com/gorgh/subprocessing/issues"

[tool.isort]
line_length = 100

[tool.black]
line_length = 100

[tool.pylint]
max-line-length = 100

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --profile --cov --cov-config=pyproject.toml --cov-report=term --cov-report=html"
testpaths = [
    "tests",
]

[tool.coverage.run]
source_pkgs = [
    "subprocessing",
]
concurrency = [
    "multiprocessing",
]
